syntax = "proto3";

package proto;

option go_package = "github.com/adamgarcia4/goLearning/cassandra/gossip/proto";

service HeartbeatService {
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}

message HeartbeatRequest {
    string node_id = 1;
    int64 timestamp = 2;
}

message HeartbeatResponse {
    string node_id = 1;
    int64 timestamp = 2;
}
